--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.calenstudio.scenelink.MainActivity">
-
+<include layout="@layout/toolbar_main"
+    />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="#eeeeee"
+        />
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -22,16 +28,21 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home" />
+            android:text="@string/title_link"/>
 
     </FrameLayout>
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+<View
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="#eeeeee"
+    />
+    <com.ashokvarma.bottomnavigation.BottomNavigationBar
+        android:id="@+id/bottom_navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation" />
+        app:bnbMode="mode_fixed"
+        app:bnbInactiveColor="@color/itemIconInactiveColor"
+       />
 
 </LinearLayout>
