--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+      xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <item
-        android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
+        android:id="@+id/navigation_scene"
+        android:icon="@drawable/bnv_link"
+        app:showAsAction="always"
+        android:title="@string/title_link" />
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
-
+        android:id="@+id/navigation_join"
+        app:showAsAction="always"
+        android:icon="@drawable/bnv_link"
+        android:title="@string/title_resource" />
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_find"
+        app:showAsAction="always"
+        android:icon="@drawable/bnv_find"
+        android:title="@string/title_find" />
+    <item
+        android:id="@+id/navigation_my"
+        app:showAsAction="always"
+        android:icon="@drawable/bnv_resource"
+        android:title="@string/title_my" />
 
 </menu>
