--- a/app/src/main/res/menu/option_menu_main.xml
+++ b/app/src/main/res/menu/option_menu_main.xml
@@ -4,12 +4,12 @@
 
 
     <item
-        android:id="@+id/navigation_scene"
+        android:id="@+id/options_item_search"
         android:icon="@drawable/menu_search"
         android:title="@string/tooltip_search"
         app:showAsAction="ifRoom"/>
     <item
-        android:id="@+id/navigation_join"
+        android:id="@+id/options_item_scan"
         app:showAsAction="always"
         android:icon="@drawable/menu_scan"
         android:title="@string/tooltip_scan" />
