实现已连接场景列表，动画效果。

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,6 @@
     tools:context="com.calenstudio.scenelink.MainActivity">
 <include layout="@layout/toolbar_main"
     />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/splitLineColor"
-        />
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -33,6 +28,7 @@
         android:layout_gravity="bottom"
         app:bnbMode="mode_fixed"
         app:bnbInactiveColor="@color/itemIconInactiveColor"
+        app:bnbBackgroundColor="@color/navigationBarBackground"
        />
 
 </LinearLayout>
