--- a/app/src/main/res/layout/activity_search_linked_scene.xml
+++ b/app/src/main/res/layout/activity_search_linked_scene.xml
@@ -10,7 +10,8 @@
 <android.support.v7.widget.Toolbar
     android:id="@+id/toolbar_search"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/toolbar_height"
+    android:minHeight="@dimen/toolbar_height"
     app:contentInsetStart="2dp"
     app:contentInsetStartWithNavigation="2dp"
     >
