--- a/app/src/main/res/layout/fragment_link.xml
+++ b/app/src/main/res/layout/fragment_link.xml
@@ -8,12 +8,14 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="4dp"
        >
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_linkedSceneList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical">
+            android:scrollbars="vertical"
+            >
 
         </android.support.v7.widget.RecyclerView>
     </android.support.v4.widget.SwipeRefreshLayout>
