--- a/app/src/main/res/layout/view_holder_linked_scene.xml
+++ b/app/src/main/res/layout/view_holder_linked_scene.xml
@@ -1,11 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="88dp">
-<TextView
-    android:id="@+id/tv_scene_name"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/title_link"/>
-</LinearLayout>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="160dp"
+                                    android:layout_marginBottom="3dp"
+                                    android:layout_marginLeft="8dp"
+                                    android:layout_marginRight="8dp"
+                                    android:layout_marginTop="3dp"
+                                    app:cardCornerRadius="0dp"
+                                    app:elevation="0dp">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
+        <com.flaviofaria.kenburnsview.KenBurnsView
+            android:id="@+id/image_scene_snapshot"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#aa000000"
+        android:padding="4dp"
+        android:layout_gravity="bottom"
+        >
+        <TextSwitcher
+            android:id="@+id/ts_scene_name_time"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+           />
+    </FrameLayout>
+
+</android.support.v7.widget.CardView>
