--- a/app/src/main/res/menu/option_menu_main.xml
+++ b/app/src/main/res/menu/option_menu_main.xml
@@ -7,11 +7,15 @@
         android:id="@+id/options_item_search"
         android:icon="@drawable/menu_search"
         android:title="@string/tooltip_search"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="always"/>
     <item
         android:id="@+id/options_item_scan"
         app:showAsAction="always"
         android:icon="@drawable/menu_scan"
         android:title="@string/tooltip_scan" />
-
+    <item
+        android:id="@+id/options_item_add"
+        android:icon="@drawable/menu_add"
+        android:title="@string/tooltip_add_scene"
+        app:showAsAction="always"/>
 </menu>
