--- a/app/src/main/res/layout/view_holder_linked_scene.xml
+++ b/app/src/main/res/layout/view_holder_linked_scene.xml
@@ -8,17 +8,13 @@
                                     android:layout_marginRight="8dp"
                                     android:layout_marginTop="3dp"
                                     app:cardCornerRadius="0dp"
-                                    app:elevation="0dp">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <com.flaviofaria.kenburnsview.KenBurnsView
-            android:id="@+id/image_scene_snapshot"
+    android:background="@drawable/linked_scene_background"
+                                    >
+        <ImageSwitcher
+            android:id="@+id/img_switcher_scene_snapshot"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"/>
-    </FrameLayout>
+            />
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -33,5 +29,53 @@
             android:layout_height="match_parent"
            />
     </FrameLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="@drawable/scene_msg_tip_background"
+    android:layout_marginTop="4dp"
+    android:layout_marginStart="4dp"
+    android:paddingEnd="8dp"
+    android:paddingStart="8dp"
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp">
+    <android.support.v7.widget.AppCompatImageView
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        app:srcCompat="@drawable/ic_message"
+        android:layout_gravity="center_vertical"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:layout_marginStart="6dp"
+        android:text="3"
+        android:textColor="@color/colorLight"/>
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/joined_count_background"
+        android:layout_marginTop="0dp"
+        android:paddingEnd="4dp"
+        android:paddingStart="10dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:layout_gravity="right">
 
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="14dp"
+            android:layout_height="14dp"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/ic_group" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:layout_marginStart="6dp"
+            android:text="48"
+            android:textColor="@color/colorLight"/>
+    </LinearLayout>
 </android.support.v7.widget.CardView>
