--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,12 @@
 <resources>
     <color name="colorPrimary">#333</color>
     <color name="colorPrimaryDark">#000</color>
-    <color name="colorAccent">#ba026d</color>
+    <color name="colorAccent">#02a489</color>
     <color name="itemIconTint">#FF0033</color>
     <color name="itemIconInactiveColor">#888888</color>
     <color name="actionBarBackground">#fff</color>
     <color name="background_material_light">#ffffff</color>
-    <color name="toolBarBackground">#ba026d</color>
+    <color name="toolBarBackground">#222</color>
     <color name="navigationBarBackground">#f8f8f8</color>
     <color name="toolBarMenuColor">#fff</color>
     <color name="toolBarTitleColor">#fff</color>
