--- a/app/src/main/res/drawable/linked_scene_background.xml
+++ b/app/src/main/res/drawable/linked_scene_background.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <stroke android:color="#444" android:width="1px"/>
+    <solid android:color="#fff"/>
+    <stroke android:color="@color/splitLineColor" android:width="1px"/>
+
 </shape>
