--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,11 @@
     tools:context="com.calenstudio.scenelink.MainActivity">
 <include layout="@layout/toolbar_main"
     />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/splitLineColor"
+        />
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -18,7 +23,7 @@
     </FrameLayout>
 <View
     android:layout_width="match_parent"
-    android:layout_height="1dp"
+    android:layout_height="1px"
     android:background="@color/splitLineColor"
     />
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
