--- a/app/src/main/res/layout/view_holder_linked_scene.xml
+++ b/app/src/main/res/layout/view_holder_linked_scene.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
-                                    android:layout_height="160dp"
-                                    android:layout_marginBottom="3dp"
-                                    android:layout_marginLeft="8dp"
-                                    android:layout_marginRight="8dp"
-                                    android:layout_marginTop="3dp"
-                                    app:cardCornerRadius="0dp"
+                                    android:layout_height="168dp"
+                                    android:layout_marginBottom="10dp"
+                                    android:layout_marginLeft="12dp"
+                                    android:layout_marginRight="12dp"
+                                    android:layout_marginTop="10dp"
+                                    android:padding="1px"
     android:background="@drawable/linked_scene_background"
                                     >
         <ImageSwitcher
@@ -78,4 +78,4 @@
             android:text="48"
             android:textColor="@color/colorLight"/>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</FrameLayout>
