--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     />
     <View
         android:layout_width="match_parent"
-        android:layout_height="1px"
+        android:layout_height="@dimen/divider_line_size"
         android:background="@color/splitLineColor"
         />
     <FrameLayout
@@ -23,7 +23,7 @@
     </FrameLayout>
 <View
     android:layout_width="match_parent"
-    android:layout_height="1px"
+    android:layout_height="@dimen/divider_line_size"
     android:background="@color/splitLineColor"
     />
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
