--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -5,12 +5,12 @@
       android:orientation="vertical">
 
     <com.calenstudio.scenelink.view.basic.SlidingTabLayout
-          android:id="@+id/sliding_tabs"
+          android:id="@+id/sliding_tabs_find"
           android:layout_width="match_parent"
           android:layout_height="wrap_content" />
 
     <android.support.v4.view.ViewPager
-          android:id="@+id/viewpager"
+          android:id="@+id/viewpager_find"
           android:layout_width="match_parent"
           android:layout_height="0px"
           android:layout_weight="1"
