--- a/app/src/main/res/drawable/joined_count_background.xml
+++ b/app/src/main/res/drawable/joined_count_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <solid android:color="#03c46d" />
+    <solid android:color="@color/colorAccent" />
     <corners android:topLeftRadius="26dp" android:bottomLeftRadius="26dp"/>
 </shape>
