--- a/app/src/main/res/drawable/linked_scene_background.xml
+++ b/app/src/main/res/drawable/linked_scene_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid android:color="#fff"/>
-    <stroke android:color="@color/splitLineColor" android:width="1px"/>
+    <stroke android:color="@color/splitLineColor" android:width="@dimen/divider_line_size"/>
 
 </shape>
