--- a/app/src/main/res/drawable/list_divider.xml
+++ b/app/src/main/res/drawable/list_divider.xml
@@ -3,6 +3,6 @@
        android:insetLeft="16dp" android:insetRight="16dp" >
     <shape android:shape="rectangle">
         <solid android:color="#ddd" />
-        <size android:height="1px" />
+        <size android:height="@dimen/divider_line_size" />
     </shape>
 </inset>
