--- a/app/src/main/res/layout/view_holder_linked_scene.xml
+++ b/app/src/main/res/layout/view_holder_linked_scene.xml
@@ -3,11 +3,8 @@
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
                                     android:layout_height="168dp"
-                                    android:layout_marginBottom="10dp"
-                                    android:layout_marginLeft="12dp"
-                                    android:layout_marginRight="12dp"
-                                    android:layout_marginTop="10dp"
-                                    android:padding="1px"
+                                    android:layout_margin="12dp"
+                                    android:padding="@dimen/divider_line_size"
     android:background="@drawable/linked_scene_background"
                                     >
         <ImageSwitcher
@@ -15,67 +12,50 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="#aa000000"
-        android:padding="4dp"
+        android:background="#66000000"
+        android:paddingStart="4dp"
         android:layout_gravity="bottom"
         >
-        <TextSwitcher
-            android:id="@+id/ts_scene_name_time"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-           />
-    </FrameLayout>
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:background="@drawable/scene_msg_tip_background"
-    android:layout_marginTop="4dp"
-    android:layout_marginStart="4dp"
-    android:paddingEnd="8dp"
-    android:paddingStart="8dp"
-    android:paddingTop="4dp"
-    android:paddingBottom="4dp">
-    <android.support.v7.widget.AppCompatImageView
-        android:layout_width="14dp"
-        android:layout_height="14dp"
-        app:srcCompat="@drawable/ic_message"
-        android:layout_gravity="center_vertical"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:layout_marginStart="6dp"
-        android:text="3"
-        android:textColor="@color/colorLight"/>
-</LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/joined_count_background"
-        android:layout_marginTop="0dp"
-        android:paddingEnd="4dp"
-        android:paddingStart="10dp"
-        android:paddingTop="4dp"
-        android:paddingBottom="4dp"
-        android:layout_gravity="right">
-
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="14dp"
-            android:layout_height="14dp"
-            android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/ic_group" />
         <TextView
+            android:id="@+id/ts_scene_name"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:maxLines="1"
+            android:textColor="#fff"
+            android:textSize="14sp"
+            android:layout_gravity="center_vertical"
+            android:ellipsize="end"
+           />
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:layout_marginStart="6dp"
-            android:text="48"
-            android:textColor="@color/colorLight"/>
+            android:orientation="horizontal"
+            android:background="@drawable/joined_count_background"
+            android:layout_marginTop="0dp"
+            android:paddingEnd="4dp"
+            android:paddingStart="10dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:layout_gravity="right|bottom">
+
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_width="14dp"
+                android:layout_height="14dp"
+                android:layout_gravity="center_vertical"
+                app:srcCompat="@drawable/ic_group" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="14sp"
+                android:layout_marginStart="6dp"
+                android:text="48"
+                android:textColor="@color/colorLight"/>
+        </LinearLayout>
     </LinearLayout>
+
 </FrameLayout>
