--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="toolbar_height">52dp</dimen>
-    <dimen name="text_size_scene_name">16sp</dimen>
+    <dimen name="text_size_scene_name">14sp</dimen>
+    <dimen name="divider_line_size">0.4dp</dimen>
 </resources>
