--- a/app/src/main/res/layout/fragment_link.xml
+++ b/app/src/main/res/layout/fragment_link.xml
@@ -14,7 +14,7 @@
             android:id="@+id/rv_linkedSceneList"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
+            android:scrollbars="none"
             >
 
         </android.support.v7.widget.RecyclerView>
