--- a/app/src/main/res/layout/view_scenes_banner.xml
+++ b/app/src/main/res/layout/view_scenes_banner.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<com.calenstudio.scenelink.view.mainpage.BannerScenesView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
-    android:background="#000000">
-    <com.calenstudio.scenelink.view.basic.LoopViewPager
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-    </com.calenstudio.scenelink.view.basic.LoopViewPager>
-    <LinearLayout android:orientation="horizontal">
+    android:layout_height="128dp">
 
-    </LinearLayout>
-</merge>
+</com.calenstudio.scenelink.view.mainpage.BannerScenesView>
