--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,10 @@
     <color name="itemIconInactiveColor">#888888</color>
     <color name="actionBarBackground">#fff</color>
     <color name="background_material_light">#ffffff</color>
-    <color name="toolBarBackground">#fefefe</color>
+    <color name="toolBarBackground">#222</color>
     <color name="navigationBarBackground">#fefefe</color>
-    <color name="toolBarMenuColor">#444</color>
-    <color name="toolBarTitleColor">#111</color>
+    <color name="toolBarMenuColor">#fefefe</color>
+    <color name="toolBarTitleColor">#fefefe</color>
     <color name="splitLineColor">#dfdfdf</color>
     <color name="colorLight">#fff</color>
 </resources>
