--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="toolbar_height">52dp</dimen>
     <dimen name="text_size_scene_name">14sp</dimen>
     <dimen name="divider_line_size">0.4dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
