--- a/app/src/main/res/layout/tab_title_scene_category.xml
+++ b/app/src/main/res/layout/tab_title_scene_category.xml
@@ -2,12 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/txt_title"
      android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_gravity="center"
     android:textColor="@color/itemIconInactiveColor"
     android:textSize="15sp"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp"
+          android:textAlignment="gravity"
+          android:gravity="center"
     android:paddingEnd="14dp"
     android:paddingStart="14dp"
     >
