--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,41 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    >
 
-    <FrameLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <com.calenstudio.scenelink.view.basic.SlidingTabLayout
             android:id="@+id/sliding_tabs_find"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="right"
-            android:clickable="true"
-            android:background="#fff">
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="20dp"
-                android:layout_gravity="center_vertical|right"
-                android:layout_height="match_parent"
-                android:layout_marginStart="14dp"
-                android:layout_marginEnd="12dp"
-                app:srcCompat="@drawable/ic_down"
-                />
-        </FrameLayout>
+            android:layout_height="40dp"
+            android:layout_marginEnd="42dp"/>
 
-    </FrameLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager_find"
+            android:layout_width="match_parent"
+            android:layout_height="0px"
+            android:layout_weight="1"
+            android:background="@android:color/white"/>
+    </LinearLayout>
+<FrameLayout
+    android:id="@+id/container_set_scene_category"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></FrameLayout>
+    <CheckBox
+        android:id="@+id/checkbox_set_scene_category"
+        android:layout_width="42dp"
+        android:layout_gravity="right|top"
+        android:layout_height="40dp"
+        android:textAlignment="gravity"
+        android:background="@drawable/background_togglebutton_set_scene_category"
+        android:paddingLeft="10dp"
+        android:button="@null"
+        android:drawableLeft="@drawable/toggle_button_set_scene_category"
+        />
 
 
-    <android.support.v4.view.ViewPager
-          android:id="@+id/viewpager_find"
-          android:layout_width="match_parent"
-          android:layout_height="0px"
-          android:layout_weight="1"
-          android:background="@android:color/white"/>
 
-</LinearLayout>
+</FrameLayout>
