--- a/app/src/main/res/layout/view_holder_linked_scene.xml
+++ b/app/src/main/res/layout/view_holder_linked_scene.xml
@@ -1,48 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
-                                    android:layout_height="168dp"
+                                    android:layout_height="wrap_content"
                                     android:layout_margin="12dp"
                                     android:padding="@dimen/divider_line_size"
-    android:background="@drawable/linked_scene_background"
+              android:orientation="vertical"
                                     >
-        <ImageSwitcher
-            android:id="@+id/img_switcher_scene_snapshot"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="#66000000"
-        android:paddingStart="4dp"
-        android:layout_gravity="bottom"
-        >
+        android:layout_marginBottom="6dp">
         <TextView
             android:id="@+id/ts_scene_name"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:maxLines="1"
-            android:textColor="#fff"
-            android:textSize="14sp"
+            android:maxLines="2"
+            android:textColor="@color/titleColor_group"
+            android:textSize="15sp"
             android:layout_gravity="center_vertical"
             android:ellipsize="end"
-           />
+            />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:background="@drawable/joined_count_background"
-            android:layout_marginTop="0dp"
-            android:paddingEnd="4dp"
-            android:paddingStart="10dp"
-            android:paddingTop="4dp"
-            android:paddingBottom="4dp"
-            android:layout_gravity="right|bottom">
-
+            android:layout_marginStart="6dp"
+            android:layout_gravity="right|top">
             <android.support.v7.widget.AppCompatImageView
                 android:layout_width="14dp"
                 android:layout_height="14dp"
@@ -52,10 +37,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp"
-                android:layout_marginStart="6dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="2dp"
                 android:text="48"
-                android:textColor="@color/colorLight"/>
+                android:textColor="@color/itemIconInactiveColor"/>
         </LinearLayout>
     </LinearLayout>
 
-</FrameLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:background="@drawable/background_linked_scene">
+        <ImageSwitcher
+            android:id="@+id/img_switcher_scene_snapshot"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="#66000000"
+            android:paddingStart="4dp"
+            android:layout_gravity="bottom"
+            >
+
+
+        </LinearLayout>
+    </FrameLayout>
+</LinearLayout>
