--- a/app/src/main/res/layout/list_item_scenes_banner.xml
+++ b/app/src/main/res/layout/list_item_scenes_banner.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="128dp">
     <com.youth.banner.Banner
         android:id="@+id/banner_scenes"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</merge>
+</FrameLayout>
