--- a/app/src/main/res/drawable/list_divider.xml
+++ b/app/src/main/res/drawable/list_divider.xml
@@ -2,7 +2,7 @@
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
        android:insetLeft="16dp" android:insetRight="16dp" >
     <shape android:shape="rectangle">
-        <solid android:color="#ddd" />
+        <solid android:color="@color/splitLineColor" />
         <size android:height="@dimen/divider_line_size" />
     </shape>
 </inset>
