--- a/app/src/main/res/layout/list_item_single_scene.xml
+++ b/app/src/main/res/layout/list_item_single_scene.xml
@@ -3,7 +3,7 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="110dp"
+              android:layout_height="120dp"
               android:paddingTop="12dp"
               android:paddingBottom="12dp"
 
@@ -14,11 +14,11 @@
         android:layout_height="0dp"
         android:layout_weight="1">
         <ImageView
+            android:id="@+id/image_scene"
             android:layout_width="128dp"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="2dp"
             android:layout_height="match_parent"
-            android:src="@drawable/aa"
             android:scaleType="centerCrop"/>
         <FrameLayout
             android:orientation="vertical"
@@ -26,7 +26,9 @@
             android:layout_height="match_parent"
             android:paddingStart="6dp">
             <TextView
-                android:text="中国互联中心体育广州天河区中檑进管现声管理分"
+                android:id="@+id/tv_scene_name"
+                android:text=""
+                android:textStyle="bold"
                 android:maxLines="2"
                 android:textSize="16sp"
                 android:textColor="@color/titleColor_group"
@@ -56,20 +58,21 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_scene_startTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="48dp"
                 android:text="12月24日 19:32"
                 android:textSize="14sp"/>
             <TextView
+                android:id="@+id/tv_scene_address"
                 android:textAlignment="gravity"
                 android:gravity="left"
                 android:textSize="14sp"
                 android:maxLines="1"
                 android:layout_gravity="bottom"
                 android:ellipsize="end"
-                android:text="广州天河区夺要在可太古汇"
+                android:text=""
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </FrameLayout>
