--- a/app/src/main/res/layout/list_item_single_scene_multi_images.xml
+++ b/app/src/main/res/layout/list_item_single_scene_multi_images.xml
@@ -100,7 +100,7 @@
             android:id="@+id/tv_scene_startTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="12月24日 19:32"
+            android:text=""
             android:textSize="12sp"/>
     </LinearLayout>
 
