--- a/app/src/main/res/drawable/list_divider.xml
+++ b/app/src/main/res/drawable/list_divider.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<inset xmlns:android="http://schemas.android.com/apk/res/android"
-       android:insetLeft="16dp" android:insetRight="16dp" >
-    <shape android:shape="rectangle">
+<shape
+       xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
         <solid android:color="@color/splitLineColor" />
         <size android:height="@dimen/divider_line_size" />
-    </shape>
-</inset>
+</shape>
