--- a/app/src/main/res/layout/view_holder_linked_scene.xml
+++ b/app/src/main/res/layout/view_holder_linked_scene.xml
@@ -3,7 +3,8 @@
                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:layout_margin="12dp"
+                                    android:layout_marginTop="14dp"
+                                    android:layout_marginBottom="14dp"
                                     android:padding="@dimen/divider_line_size"
               android:orientation="vertical"
                                     >
@@ -47,7 +48,7 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp"
+        android:layout_height="160dp"
         android:background="@drawable/background_linked_scene">
         <ImageSwitcher
             android:id="@+id/img_switcher_scene_snapshot"
@@ -66,4 +67,26 @@
 
         </LinearLayout>
     </FrameLayout>
+    <LinearLayout
+        android:layout_marginTop="2dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_scene_address"
+            android:textSize="12sp"
+            android:maxLines="1"
+            android:ellipsize="end"
+            android:text=""
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_marginEnd="14dp"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/tv_scene_startTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="12sp"/>
+    </LinearLayout>
 </LinearLayout>
