--- a/app/src/main/res/layout/fragment_scene_live.xml
+++ b/app/src/main/res/layout/fragment_scene_live.xml
@@ -22,6 +22,7 @@
             android:fitsSystemWindows="true"
             app:collapsedTitleTextAppearance="@style/CollapsingToolbarLayout.CollapsedTitleText"
             app:expandedTitleTextAppearance="@style/CollapsingToolbarLayout.ExpandedTitleText"
+            app:expandedTitleMarginStart="4dp"
             app:contentScrim="@color/toolBarBackground"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 <ImageView
