--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
     <style name="CollapsingToolbarLayout.ExpandedTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/colorLight</item>
+        <item name="android:maxLines">2</item>
     </style>
 
 
