--- a/app/src/main/res/layout/activity_scene.xml
+++ b/app/src/main/res/layout/activity_scene.xml
@@ -8,18 +8,12 @@
               android:orientation="vertical"
               tools:context="com.calenstudio.scenelink.view.MainActivity">
         />
-    <!--<View-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="@dimen/divider_line_size"-->
-    <!--android:background="@color/splitLineColor"-->
-    <!--/>-->
-    <FrameLayout
-        android:id="@+id/content"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager_scene"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-
-    </FrameLayout>
+    </android.support.v4.view.ViewPager>
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/divider_line_size"
