--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,7 +16,7 @@
     </style>
     <style name="CollapsingToolbarLayout.CollapsedTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">16sp</item>
-        <item name="android:textColor">@color/toolBarTitleColor</item>
+        <item name="android:textColor">@color/colorLight</item>
     </style>
     <style name="CollapsingToolbarLayout.ExpandedTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">20sp</item>
