--- a/app/src/main/res/menu/option_menu_main.xml
+++ b/app/src/main/res/menu/option_menu_main.xml
@@ -17,5 +17,5 @@
         android:id="@+id/options_item_add"
         android:icon="@drawable/menu_add"
         android:title="@string/tooltip_add_scene"
-        app:showAsAction="always"/>
+        app:showAsAction="never"/>
 </menu>
