--- a/app/src/main/res/layout/fragment_scene_live.xml
+++ b/app/src/main/res/layout/fragment_scene_live.xml
@@ -1,56 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:fitsSystemWindows="true"
     tools:context="com.calenstudio.scenelink.view.scene.SceneActivity">
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
-        android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay">
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        >
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_live_messages"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:collapsedTitleTextAppearance="@style/CollapsingToolbarLayout.CollapsedTitleText"
-            app:expandedTitleTextAppearance="@style/CollapsingToolbarLayout.ExpandedTitleText"
-            app:expandedTitleMarginStart="12dp"
-            app:collapsedTitleGravity="center"
-            app:contentScrim="@color/colorAccent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scaleType="centerCrop"
-    android:src="@drawable/cc"/>
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/toolbar_height"
-                android:minHeight="@dimen/toolbar_height"
-                app:contentInsetStartWithNavigation="2dp"
-                app:titleTextAppearance="@style/Toolbar.TitleText"
-                app:layout_collapseMode="pin"
-               />
-        </android.support.design.widget.CollapsingToolbarLayout>
-    </android.support.design.widget.AppBarLayout>
+            android:background="#eeeeee">
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+    <include layout="@layout/view_horizontal_divide_line"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:background="@color/navigationBarBackground">
+        <android.support.v7.widget.AppCompatImageButton
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/ic_chat_voice"
+            android:background="#fff"
+            />
+        <android.support.v7.widget.AppCompatEditText
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"/>
+        <android.support.v7.widget.AppCompatImageButton
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/ic_chat_emotion"
+            android:background="#fff"/>
+        <android.support.v7.widget.AppCompatImageButton
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/ic_chat_more"
+            android:background="#fff"/>
+    </LinearLayout>
 
-    <include layout="@layout/content_scene"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
-        app:fabSize="mini"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@android:drawable/ic_dialog_email"/>
-
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
