--- a/app/src/main/res/layout/list_item_scenes_vertical_list.xml
+++ b/app/src/main/res/layout/list_item_scenes_vertical_list.xml
@@ -9,36 +9,8 @@
               android:paddingStart="12dp"
               android:paddingEnd="12dp"
     >
-<LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
-    <TextView
-        android:id="@+id/tv_sceneGrupTitle"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:textSize="18sp"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textStyle="bold"
-        android:textColor="#000"
-        android:layout_marginTop="12dp"
-        android:layout_marginBottom="12dp"
-        android:layout_gravity="center_vertical"/>
-   <Button
-       android:layout_width="68dp"
-       android:layout_height="match_parent"
-       android:background="#fff"
-       android:textColor="@color/colorAccent"
-       android:drawableLeft="@drawable/ic_change_compat"
-       android:text="换一换"
-       />
-</LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/divider_line_size"
-        android:background="@color/splitLineColor"/>
+<include layout="@layout/list_item_scenes_titlebar"/>
+    <include layout="@layout/view_horizontal_divide_line"/>
     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/verticalList_scenes"
